    strategy would fail if the entity was an aliased()
    construct.  [ticket:1964]

  - Fixed indexing of Query objects by -1. It was erroneously
    transformed to the empty slice -1:0 that resulted in
    IndexError. [ticket:1968]

- sql
  - The 'info' attribute of Column is copied during 
    Column.copy(), i.e. as occurs when using columns
    in declarative mixins.  [ticket:1967]
    
- engine
  - Implemented sequence check capability for the C 
    version of RowProxy, as well as 2.7 style 
    "collections.Sequence" registration for RowProxy.
    [ticket:1871]
    
- mysql
  - Fixed error handling for Jython + zxjdbc, such that 
    has_table() property works again.  Regression from
    0.6.3 (we don't have a Jython buildbot, sorry)
    [ticket:1960]

- sqlite
  - The REFERENCES clause in a CREATE TABLE that includes
    a remote schema to another table with the same schema 
    name now renders the remote name without
    the schema clause, as required by SQLite.  [ticket:1851]

  - On the same theme, the REFERENCES clause in a CREATE TABLE
    that includes a remote schema to a *different* schema
    than that of the parent table doesn't render at all,
    as cross-schema references do not appear to be supported.
    
0.6.5
=====
- orm
  - Added a new "lazyload" option "immediateload".  
    Issues the usual "lazy" load operation automatically
    as the object is populated.   The use case
    here is when loading objects to be placed in
    an offline cache, or otherwise used after
    the session isn't available, and straight 'select'
    loading, not 'joined' or 'subquery', is desired.
    [ticket:1914]
  
  - New Query methods: query.label(name), query.as_scalar(),
    return the query's statement as a scalar subquery
    with /without label [ticket:1920];
    query.with_entities(*ent), replaces the SELECT list of 
    the query with new entities. 
    Roughly equivalent to a generative form of query.values()